/*
 * $Id: ChangeLog,v 1.674 2003/02/02 02:14:05 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-02-02 03:10 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/gtQTc/gtQTc.cpp
  * source/rtl/gtQTc/qtconsoledoc.cpp
  * source/rtl/gtQTc/qtconsoledoc.h
  * source/rtl/gtQTc/qtconsoleview.cpp
  * source/rtl/gtQTc/qtconsoleview.h
    + Cursor can now turned ON/OFF
    * Optimizations in various places

2003-02-02 03:10 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/gtQTc/gtQTc.cpp
  * source/rtl/gtQTc/qtconsole.cpp
  * source/rtl/gtQTc/qtconsole.h
  * source/rtl/gtQTc/qtconsoledoc.cpp
  * source/rtl/gtQTc/qtconsoledoc.h
  * source/rtl/gtQTc/qtconsoleview.cpp
  * source/rtl/gtQTc/qtconsoleview.h
    + Added input support (pretty compelte I think)
    ! fixed box support
    ! Background is cleanly deleted
    + Scroll is now able to clean an area of the screen

  * tests/mtgc.prg
    * working tests.

  * tests/qttest.prg
    Added test of get/read (working :-)

2003-02-01 20:01 UTC+0100 Patrick Mast <patrick@winfakt.com>
  * source/rtl/tpopup.prg
    ! Fixed nDif warnings

2003-02-01 16:06 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  ! source/vm/thread.c
    ! Fixed the possible deadlock at thread termination when GC
      is involved.

2003-02-01 12:10 UTC-0200 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rdd/dbcmd.c
    ! Last change fix linux problem with RLOCK() but break windows.
      Fix now to work properly on both system

2003-02-01 13:46 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  ! source/vm/thread.c
    ! Fixed an error introduced by my on last optimization tests.
      Now it seems that MT is pretty stable also under GC. There
      are still minor problems, but now it goes great.
      
  % source/vm/estack.c