@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.674 2003/02/02 02:14:05 jonnymind Exp $
+ * $Id: ChangeLog,v 1.675 2003/02/02 22:31:14 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,9 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-02-02 22:50 UTC-0200 Luiz Rafael Culik <culikr@uol.com.br>
+  * contrib/rdd_ads/adsfunc.c
+    + Added functions for Transactions
 
 2003-02-02 03:10 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/gtQTc/gtQTc.cpp
